@@ -161,7 +161,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10701) Link to Special:Listusers in default Special:Statistics messages
 * Improved file history presentation
 * (bug 10739) Users can now enter comments when reverting files
-* Improved handling of permissions errors.
+* Improved handling of permissions errors
+* (bug 10798) Exclude MediaWiki namespace from filtering options on
+  Special:Protectedpages (implicit protection, doesn't make sense to have it)
 
 == Bugfixes since 1.10 ==
 
